--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "eslint": "^8.57.1",
     "eslint-plugin-prettier": "^5.5.1",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
